--- a/Laroni-Travel/View/ReizenView.xaml
+++ b/Laroni-Travel/View/ReizenView.xaml
@@ -247,7 +247,7 @@
                     </StackPanel>
                 </Button>
                 <Label Content="Deelnemers reis" Margin="15" Foreground="White" FontSize="25" Grid.Row="8" Grid.Column="0" />
-                <ListView ItemsSource="{Binding DeelnemersRecord}" Foreground="White" Grid.Row="9" Grid.Column="0" Margin="15" SelectedItem="{Binding SelectedDeelnemerReis}">
+                <ListView ItemsSource="{Binding DeelnemersRecord}" Foreground="White" Grid.Row="9" Grid.Column="0" Margin="15" SelectedItem="{Binding SelectedDeelnemerOpleiding}">
                     <ListView.View>
                         <GridView>
 
