--- a/Laroni-Travel/View/HomeView.xaml
+++ b/Laroni-Travel/View/HomeView.xaml
@@ -32,14 +32,14 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <GroupBox Grid.Column="1" Grid.Row="0" Header="Aankomende monitor-opleidingen" FontSize="30" Margin="20" Background="#3D004E" Foreground="White">
-                    <ListBox ItemsSource="{Binding Opleidingen}" />
+                <GroupBox Grid.Column="1" Grid.Row="0" Header="Aankomende monitor-opleidingen" FontSize="30" Margin="20" Background="#3D004E">
+                    <ListBox ItemsSource="{Binding Opleidingen}" Foreground="White" FontSize="20" />
                 </GroupBox>
                 <GroupBox Grid.Column="0" Grid.Row="1" Header="Aantal Deelnemers" FontSize="30" Margin="20" Background="#3D004E" Foreground="White">
-                    <Label Content="{Binding AantalDeelnemers}" />
+                    <Label Content="{Binding AantalDeelnemers}" Foreground="White" FontSize="20" />
                 </GroupBox>
                 <GroupBox Grid.Column="1" Grid.Row="1" Header="Aantal Reizen" FontSize="30" Margin="20" Background="#3D004E" Foreground="White">
-                    <Label Content="{Binding AantalReizen}" />
+                    <Label Content="{Binding AantalReizen}" Foreground="White" FontSize="20" />
                 </GroupBox>
                 <Grid Margin="20">
                     <Grid.Resources>
